pазбивает на модули + конфиг webpack

--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,12 @@
     </div>
 
     <main class="main">
-      <section class="main__control control container">
-        <h1 class="control__title">TASKMANAGER</h1>
-        <!-- Меню -->
+      <section class="main__control control container"></section>
+      <section class="board container">
+        <div class="board__tasks"></div>
       </section>
 
-      <!-- Фильтры -->
-
-      <!-- Контент -->
     </main>
+    <script src="./bundle.js"></script>
   </body>
 </html>
