Добавляет логику для load-more

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,11 @@
     </div>
 
     <main class="main">
-      <section class="main__control control container"></section>
-      <section class="board container">
-        <div class="board__tasks"></div>
+      <section class="main__control control container">
+        <h1 class="control__title">TASKMANAGER</h1>
       </section>
-
     </main>
-    
+
     <script src="./bundle.js"></script>
   </body>
 </html>
